app/styles/mystyles.css
/* 
 * Some shizzle
 */

*, *:before, *:after {
    -webkit-box-sizing: border-box; /* Needed for mobile WebKit */
    -moz-box-sizing: border-box; /* Needed for Firefox */
    box-sizing: border-box
}

body {
    color: #333;
    font-family: lato, Voces;
}



.background-old {
    background-color: #f5f5f5;
}
.background-old {
    background-color: rgb(230, 222, 220);
}
.background {
    background-color: #252525;
}
.sexy-background {
    background-image: url('../misc/sexybackground.jpg');
}
.link {
    stroke: #ccc;
}

.descriptive-text {
    font-size: 1.25em;
    color:#333;
    font-family: Voces;
}
#my-social-buttons {
    margin-top: 1.5em;
}
h1, h2, h3, h4, h5, h6 {
    color: #5e5e5e;
    margin-bottom: 0.4rem;
}
/*
.container-thing {
    background: #3f92d2;
}
  */
#linkedin-button {
    margin-bottom: 0.5em;
}

#jumbo_text1 {
    color: #fff;
}

.regular-link {
    color: #474747;
    font-family: lato, Voces;
}

.nav-link {
    color: rgb(230, 222, 220);
    padding: 0.4rem;
    display: inline-block;
    font-size: 1.1rem;
    font-family: Voces;
    margin-left: 0.25rem;
    margin-right: 0.25rem;
    border-radius: 5px;
    background-color: #0975FF;
    width: 6rem;
    height:1.8rem;
    overflow: hidden;
}

.nav-link:hover .nav-text {
    transform: translateY(-3em);
    -ms-transform: translateY(-3em);
    -webkit-transform: translateY(-3em);
}
.nav-link:hover .nav-help-text {
    transform: translateY(-3em);
    -ms-transform: translateY(-3em);
    -webkit-transform: translateY(-3em);
}
/*
    background-color: rgba(29, 36, 40, 10);
}
*/

.info-panel {
    background-color: #fff;
    border-radius:5px;
}

#name-header h1 {
    margin-bottom: 0.4rem;
}
#name-header span {
    font-family: Lato, Voces;
    color: #EFEFEF;
    display: inline-block;
    opacity: 0;
    transition: -webkit-transform 800ms, opacity 800ms;
    transition: -moz-transform 800ms, opacity 800ms;
    transition: -ms-transform 800ms, opacity 800ms;
    transition: -o-transform 800ms, opacity 800ms;
    -webkit-transform: translateZ(0) translateY(100px);
    -moz-transform: translateZ(0) translateY(100px);
    -ms-transform: translateZ(0) translateY(100px);
    -o-transform: translateZ(0) translateY(100px);
}

#name-header {
    overflow: hidden;
    transition: font-size 400ms;
}

.page-loaded #name-header span {
    opacity: 1;
    transition: -webkit-transform 1350ms, opacity 1200ms;
    transition: -moz-transform 1350ms, opacity 1200ms;
    transition: -ms-transform 1350ms, opacity 1200ms;
    transition: -o-transform 1350ms, opacity 1200ms;
    -webkit-transform: translateZ(0) translateY(0);
    -moz-transform: translateZ(0) translateY(0);
    -ms-transform: translateZ(0) translateY(0);
    -o-transform: translateZ(0) translateY(0);
}

.content-container:target {
    display:block;
    text-align: justify;
}

.content-container {
    display: inline-block;
    display: none;
    color: rgb(230, 222, 220);
    font-size:1.3em;
}

.thingy {
    position: relative;
}
.nav-help-text {
    transition: transform 500ms;
    transition: -ms-transform 500ms;
    transition: -webkit-transform 500ms;
}

.nav-text {
    transition: transform 500ms;
    transition: -ms-transform 500ms;
    transition: -webkit-transform 500ms;
    margin-bottom:2em;
}

a:hover, a:focus {
    color: rgb(230, 222, 220);
    cursor: auto;
}

#homepage-display {
    margin-bottom: 3%;
    padding-bottom:1%;
    margin-top: 18%;
}

.page-loaded > #homepage-display {
    transition: margin-top 1000ms;
}

#homepage-display.small-home{
    margin-top:0;
    background-color: rgba(0, 0, 0, 0.3);
}

#homepage-display.small-home h1 {
    font-size: 1.7em;
    transition: font-size 300ms;
}

#where a{
    color:#000;
}
#where a:hover{
    color:#333;
}
#where {
    margin-top:5%;
    font-size: 4rem;
    opacity:0.7;
}

.row.info-listing {
    background: #444;
    border-radius: 0.15em;
    margin-bottom: 1em;
    padding: 0.5em;
}

.row.info-listing > .large-4 {
    text-align: center;
}

.logo {
    width: 100%;
    max-width: 12em;
    max-height: 10em;
}

